# picpay-backend-challenge

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml
picpay/: asgi.py  settings.py  urls.py  wsgi.py
picpay/account/: apps.py  dto.py  entities.py  enum.py  factories.py  models.py  repositories.py  serializers.py  signals.py  urls.py
picpay/account/migrations/: 0001_initial.py  0002_initial.py
picpay/account/use_cases/: create_account.py  db_get_account.py
picpay/account/views/: create_account_api_view.py
picpay/transaction/: apps.py  dto.py  enum.py  factories.py  models.py  repositories.py  serializers.py  urls.py
picpay/transaction/migrations/: 0001_initial.py
picpay/transaction/use_cases/: create_new_deposit.py
picpay/transaction/views/: create_deposit_api_view.py
picpay/utils/: entities.py  serializer.py
picpay/wallet/: apps.py  factories.py  models.py  repositories.py
picpay/wallet/migrations/: 0001_initial.py
